Update Gamebar and New Game Creation
This commit breaks the app, but I'm working on a fix.

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #2C2F33;
+  background-color: #2E3136;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
