Add more section work, including a new section modal

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -42,3 +42,8 @@ $fullWhite: #ffffff;
 .hide-scrollbar {
   -ms-overflow-style: none;
 }
+
+.dropdown:focus {
+  outline: none;
+  box-shadow: none;
+}
