--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,49 +1,49 @@
 $darkdarkGrayBackground: #202225;
-$lighterGray: #2E3136;
-$evenLighterGray: #36393E;
+$lighterGray: #2e3136;
+$evenLighterGray: #36393e;
 $fullWhite: #ffffff;
 
 .App {
-  text-align: center;
-  background-color: $darkdarkGrayBackground;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    text-align: center;
+    background-color: $darkdarkGrayBackground;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .GameBar {
-  height: 100vh;
-  width: 10vw;
+    height: 100vh;
+    width: 10vw;
 }
 
 .align-center {
-  align-items: center;
+    align-items: center;
 }
 
 .avatar-button {
-  cursor: pointer;
-  -webkit-user-select: none; /* Safari */        
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE10+/Edge */
-  user-select: none; /* Standard */
+    cursor: pointer;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .hide-scrollbar::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 /* Hide scrollbar for IE and Edge */
 .hide-scrollbar {
-  -ms-overflow-style: none;
+    -ms-overflow-style: none;
 }
 
 .dropdown:focus {
-  outline: none;
-  box-shadow: none;
+    outline: none;
+    box-shadow: none;
 }
