Fix select dropdown theming issue

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -55,3 +55,33 @@ $fullWhite: #ffffff;
     overflow-x: hidden;
     overflow-y: auto;
 }
+
+.timezone-select > select {
+    color: white;
+    background-color: #2e3136;
+}
+
+.timezone-select > option {
+    color: white;
+    background-color: #2e3136;
+}
+
+.timezone-select {
+    color: white;
+    background-color: #2e3136;
+}
+
+.timezone-select > input {
+    color: white;
+    background-color: #2e3136;
+}
+
+.timezone-select > span {
+    color: white;
+    background-color: #2e3136;
+}
+
+.timezone-select > div {
+    color: white;
+    background-color: #2e3136;
+}
