Add animation to delete task icon

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -85,3 +85,11 @@ $fullWhite: #ffffff;
     color: white;
     background-color: #2e3136;
 }
+
+.export-btn div path {
+    stroke: #ef5350;
+}
+
+.export-btn-white path {
+    stroke: #ffffff;
+}
