--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -93,3 +93,15 @@ $fullWhite: #ffffff;
 .export-btn-white path {
     stroke: #ffffff;
 }
+
+.timePicker {
+    background-color: #2e3136;
+}
+
+.timePicker select {
+    background-color: #2e3136;
+}
+
+.timePicker option {
+    background-color: #2e3136;
+}
